--- a/reference/orders.v2.oas2.yml
+++ b/reference/orders.v2.oas2.yml
@@ -2777,7 +2777,7 @@ components:
                 example: a8458391-ef68-4fe5-9ec1-442e6a767364
                 type: string
               status:
-                description: 'The status will include one of the (string, optiona) - values defined under Order Statuses. This value is read-only. Do not attempt to modify or set this value in a POST or PUT operation.'
+                description: 'The status will include one of the (string, optional) - values defined under Order Statuses. This value is read-only. Do not attempt to modify or set this value in a POST or PUT operation.'
                 example: Awaiting Fulfillment
                 type: string
               custom_status:
@@ -4366,7 +4366,7 @@ components:
           type: string
         status:
           type: string
-          description: 'The status will include one of the (string, optiona) - values defined under Order Statuses. This value is read-only. Do not attempt to modify or set this value in a POST or PUT operation.'
+          description: 'The status will include one of the (string, optional) - values defined under Order Statuses. This value is read-only. Do not attempt to modify or set this value in a POST or PUT operation.'
           example: Awaiting Fulfillment
         subtotal_tax:
           description: 'A read-only value. Do not attempt to set or modify this value in a POST or PUT operation. (Float, Float-As-String, Integer)'
@@ -4435,6 +4435,18 @@ components:
           description: The transactional currency ID. A read-only value. Do not pass in a POST or PUT.
           example: 1
           type: integer
+        default_currency_code:     
+          description: The currency code of the store's default currency; returned on orders when Multi-Currency is enabled on the store.
+          example: EUR
+          type: string
+        store_default_currency_code: 
+         description: The currency code of the store's default currency; returned on orders when Multi-Currency is enabled on the store.
+         example: USD
+         type: string
+        store_default_to_transactional_exchange_rate:
+          description: The exchane rate between the store's default currency and the transactional currency used in the order; returned on orders when Multi-Currency is enabled on the store.
+          example: '100.0000000000'
+          type: string
         coupon_discount:
           description: 'A read-only value. Do not pass in a POST or PUT. (Float, Float-As-String, Integer)'
           example: '5.0000'
