--- a/reference/orders.v2.oas2.yml
+++ b/reference/orders.v2.oas2.yml
@@ -4226,7 +4226,7 @@ components:
 
             AvaTaxProvider - Tax is set to automatic and order is created in the store. Used for Avalara.
 
-            "" (Null) - When the order is created with the API, or the tax provider is unknown.
+            "" (empty string) - The order is created with the API, or the tax provider is unknown.
           enum:
             - BasicTaxProvider
             - AvaTaxProvider
