--- a/reference/orders.v2.oas2.yml
+++ b/reference/orders.v2.oas2.yml
@@ -4235,7 +4235,7 @@ components:
         customer_locale:
           type: string
           example: en
-          description: The customer’s locale
+          description: The customer’s locale.
         total_ex_tax:
           description: 'Override value for the total, excluding tax. If specified, the field `total_inc_tax` is also required. (Float, Float-As-String, Integer)'
           example: '225.0000'
