--- a/reference/checkouts.sf.yml
+++ b/reference/checkouts.sf.yml
@@ -1365,7 +1365,7 @@ paths:
               customerMessage: ''
   '/checkouts/{checkoutId}/consignments/{consignmentId}':
     put:
-      description: "Updates an existing consignment. Shipping address, line item IDs or the shipping option ID can be updated using this endpoint.\n\nThere are two steps to add a new shipping address and shipping options with line items. \n1. Add a new Consignment to Checkout.\n2. Update the Consignment with Shipping Options.\n* \t Update each *Consignment* `shippingOptionId` (shipping address and line items) with the `availableShippingOption > id` from Step One. \n\n**Required Fields**\n* shippingOptionId\n\nTo learn more about creating a Checkout Consignment see [Working with the Fetch API](/api-docs/cart-and-checkout/working-sf-apis).\n\n<!-- theme: info --> \n\n> #### Note\n> * You cannot pass both an `address` and `shippingOptionId` because the shipping option may not be able to be applied to the given address \n> * The Send a Test Request feature is not currently supported for this endpoint."
+      description: "Updates an existing consignment. Either the shipping address, one or more line item IDs, or the shipping option ID can be updated in a single call to this endpoint.\n\nThere are two steps to add a new shipping address and shipping options with line items. \n1. Add a new Consignment to Checkout.\n2. Update the Consignment with Shipping Options.\n* \t Update each *Consignment* `shippingOptionId` (shipping address and line items) with the `availableShippingOption > id` from Step One. \n\n**Required Fields**\n* shippingOptionId\n\nTo learn more about creating a Checkout Consignment see [Working with the Fetch API](/api-docs/cart-and-checkout/working-sf-apis).\n\n<!-- theme: info --> \n\n> #### Note\n> * You cannot pass both an `address` and a `shippingOptionId` because the shipping option may not be available for the new address \n> * The Send a Test Request feature is not currently supported for this endpoint."
       tags:
         - Checkout Consignments
       operationId: CheckoutsConsignmentsByCheckoutIdAndConsignmentIdPut
@@ -3139,8 +3139,8 @@ definitions:
                   description: ''
                   type: string
                 shippingAddress:
-                    type: object
-                    x-deprecated: true
+                  type: object
+                  x-deprecated: true
                 address:
                   title: Address Response
                   allOf:
@@ -3439,8 +3439,8 @@ definitions:
     x-internal: true
     properties:
       shippingAddress:
-            type: object
-            x-deprecated: true
+        type: object
+        x-deprecated: true
       address:
         type: object
         title: Address Properties
