PROMO-702 [fix] tighten definitions within channels reference

--- a/reference/channels.v3.yml
+++ b/reference/channels.v3.yml
@@ -1096,6 +1096,9 @@ components:
                   $ref: '#/components/schemas/ChannelWithoutCurrencies'
               meta:
                 $ref: '#/components/schemas/MetaWithFullPagination'
+            required:
+              - data
+              - meta
           examples:
             response:
               $ref: '#/components/examples/multiple_channels_without_currencies_resp_example'
@@ -2670,6 +2673,9 @@ components:
           $ref: '#/components/schemas/ChannelDateModified'
         icon_url:
           $ref: '#/components/schemas/IconUrl'
+      required:
+        - id
+        - name
       x-internal: false
     ChannelWithCurrencies:
       type: object
